<resources>
    <string name="app_name">News App</string>

    <string name="settings_menu_item">Settings</string>

    <string name="settings_title">News Settings</string>

    <!-- Error message when there is no internet connectivity [CHAR LIMIT=NONE] -->
    <string name="no_internet_connection">No internet connection.</string>

    <string name="no_news">No news found.</string>

    <!--<string name="settings_total_results_label">Total Results</string>-->

    <!--<string name="settings_total_results_key" translatable="false">total_results</string>-->

    <!--<string name="settings_total_results_default" translatable="false">10</string>-->

    <string name="settings_total_results">Total Results</string>
    <string name="settings_total_results_key" translatable="false">total_results</string>
    <string name="settings_total_results_default" translatable="false">10</string>
    <string-array name="settings_total_results_titles">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="settings_total_results_values">
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>

    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order_by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
</resources>
