<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <ListPreference
        android:defaultValue="10"
        android:entries="@array/settings_total_results_titles"
        android:entryValues="@array/settings_total_results_values"
        android:key="@string/settings_total_results_key"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/settings_total_results" />

    <!--<EditTextPreference-->
        <!--android:defaultValue="@string/settings_total_results_default"-->
        <!--android:inputType="numberDecimal"-->
        <!--android:key="@string/settings_total_results_key"-->
        <!--android:selectAllOnFocus="true"-->
        <!--android:title="@string/settings_total_results_label" />-->

</PreferenceScreen>